[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Title Test.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -63.0
margin_top = 14.0
margin_right = 63.0
margin_bottom = 61.0
bbcode_enabled = true
bbcode_text = "[center][u]Ensueños
[/u]Sweet Memories[/center][center]﻿[/center]"
text = "Ensueños
Sweet Memories﻿"

[node name="Creds" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -178.0
margin_top = -10.0
margin_right = -97.0
margin_bottom = 31.0
text = "Credits"

[node name="Level_Sel" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 81.0
margin_top = -10.0
margin_right = 162.0
margin_bottom = 31.0
text = "Level Select"

[connection signal="pressed" from="Creds" to="." method="_on_Creds_pressed"]
[connection signal="pressed" from="Level_Sel" to="." method="_on_Level_Sel_pressed"]
